<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_search"/>
    <item
        android:id="@id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@id/menu_donation"
        android:orderInCategory="120"
        android:showAsAction="never"
        android:title="@string/menu_donation"/>
    <item
        android:id="@id/menu_about"
        android:orderInCategory="140"
        android:showAsAction="never"
        android:title="@string/menu_about"/>
    <item
        android:id="@id/menu_debug_buy"
        android:orderInCategory="160"
        android:showAsAction="never"
        android:title="@string/menu_debug_buy"/>
    <item
        android:id="@id/menu_debug_return"
        android:orderInCategory="180"
        android:showAsAction="never"
        android:title="@string/menu_debug_return"/>

</menu>