<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@id/container_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ProgressBar
            android:id="@android:id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@android:id/progress"
            android:layout_centerHorizontal="true"
            android:text="@string/common_loading"
            android:textIsSelectable="false" />
    </RelativeLayout>

    <LinearLayout
        android:id="@android:id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@android:id/text1"
            style="@style/Heading"
            android:text="@string/fragment_close_to_me_heading"
            android:textIsSelectable="false" />

        <TextView
            style="RowLabel.SubHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_close_to_me_subheading"
            android:textIsSelectable="false"
            android:layout_marginLeft="8dp"
            android:textColor="@android:color/darker_gray"
            android:textStyle="italic" />

        <ListView
            android:id="@android:id/list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>